# euclid-macro

./: .gitignore  README.md  data-collection-plan.md  env.example  fetch_sp500_simple.py  main.py  pyproject.toml  requirements.txt  run_data_collection.py  run_pipeline.sh  test_occ_2008.py  test_occ_debug.py  test_occ_incremental.py  test_occ_simple.py  test_sp500_debug.py
data/: symbols.csv
scripts/: run_data_collection.py
src/: config.py  data_collection.py  utils.py
src/core/: __init__.py  base_fetcher.py  config_manager.py  date_utils.py  logging_setup.py  symbol_processor.py  utils.py
src/fetchers/: __init__.py  fetch_baker.py  fetch_eia.py  fetch_finra.py  fetch_fred.py  fetch_occ.py  fetch_sp500.py  fetch_usda.py  fetch_yahoo.py
src/utils/: __init__.py  excel_processing_utils.py  file_download_utils.py  transform_utils.py  web_scraping_utils.py
